tests/rosetta/transpiler/Clojure/fivenum-2.error
run error: exit status 1
WARNING: last already refers to: #'clojure.core/last in namespace: main, being replaced by: #'main/last
Execution error (IndexOutOfBoundsException) at main/qsel (fivenum-2.clj:18).
null

Full report at:
/tmp/clojure-14001172136286723483.edn
